
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef int u16 ;


 int DSSERR (char*,...) ;

__attribute__((used)) static void dsi_show_rx_ack_with_err(u16 err)
{
 DSSERR("\tACK with ERROR (%#x):\n", err);
 if (err & (1 << 0))
  DSSERR("\t\tSoT Error\n");
 if (err & (1 << 1))
  DSSERR("\t\tSoT Sync Error\n");
 if (err & (1 << 2))
  DSSERR("\t\tEoT Sync Error\n");
 if (err & (1 << 3))
  DSSERR("\t\tEscape Mode Entry Command Error\n");
 if (err & (1 << 4))
  DSSERR("\t\tLP Transmit Sync Error\n");
 if (err & (1 << 5))
  DSSERR("\t\tHS Receive Timeout Error\n");
 if (err & (1 << 6))
  DSSERR("\t\tFalse Control Error\n");
 if (err & (1 << 7))
  DSSERR("\t\t(reserved7)\n");
 if (err & (1 << 8))
  DSSERR("\t\tECC Error, single-bit (corrected)\n");
 if (err & (1 << 9))
  DSSERR("\t\tECC Error, multi-bit (not corrected)\n");
 if (err & (1 << 10))
  DSSERR("\t\tChecksum Error\n");
 if (err & (1 << 11))
  DSSERR("\t\tData type not recognized\n");
 if (err & (1 << 12))
  DSSERR("\t\tInvalid VC ID\n");
 if (err & (1 << 13))
  DSSERR("\t\tInvalid Transmission Length\n");
 if (err & (1 << 14))
  DSSERR("\t\t(reserved14)\n");
 if (err & (1 << 15))
  DSSERR("\t\tDSI Protocol Violation\n");
}
